--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: quminghaonan
 
 name: quminghaonan's homepage
 description: Jinlin University 14-18
-url: http://yongyuan.name
+url: https://qumingzhentmnan.github.io/
 
 # 自定义post url
 permalink: /blog/:title.html
